# RSFMs

./: README.md  pyproject.toml
configs/: experiment.yaml
configs/datasets/: hls_burn_scars.yaml  multi_temporal_crop.yaml  sen1floods11.yaml
configs/foundation_models/: mmearth.yaml  prithvi.yaml
scripts/: finetune.sh  test.sh
src/rsfms/: __init__.py  __main__.py  cli_tools.py
src/rsfms/datamodules/: __init__.py  fire_scars.py  generic_pixel_wise_data_module.py  generic_scalar_label_data_module.py  m_SA_crop_type.py  m_bigearthnet.py  m_brick_kiln.py  m_cashew_plantation.py  m_chesapeake_landcover.py  m_eurosat.py  m_forestnet.py  m_neontree.py  m_nz_cattle.py  m_pv4ger.py  m_pv4ger_seg.py  m_so2sat.py  sen1floods11.py  torchgeo_data_module.py
src/rsfms/datasets/: __init__.py  generic_pixel_wise_dataset.py  generic_scalar_label_dataset.py  m_SA_crop_type.py  m_bigearthnet.py  m_brick_kiln.py  m_cashew_plantation.py  m_chesapeake_landcover.py  m_eurosat.py  m_forestnet.py  m_neontree.py  m_nz_cattle.py  m_pv4ger.py  m_pv4ger_seg.py  m_so2sat.py  sen1floods11.py
src/rsfms/models/: __init__.py  clay_model_factory.py  mmearth_model_factory.py  pixel_wise_model.py  prithvi_model_factory.py  satmae_model_factory.py  scalar_output_model.py  scalemae_model_factory.py  smp_model_factory.py  timm_model_factory.py
src/rsfms/models/backbones/: __init__.py  convnextv2.py  prithvi_select_patch_embed_weights.py  prithvi_vit.py
src/rsfms/models/decoders/: __init__.py
src/rsfms/models/heads/: __init__.py
src/rsfms/tasks/: __init__.py  classification_tasks.py  loss_handler.py  multilabel_classification_tasks.py  regression_tasks.py  segmentation_tasks.py
