[build-system]
requires = [ "setuptools" ]
build-backend = 'setuptools.build_meta'

[project]
name = "rsfms"
version = "0.1.0"
description = "RSFMs Playground - A playground for remote sensing foundation models"
license = { "text" = "Apache License, Version 2.0" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["fine-tuning", "remote sensing foundation models", "evaulation", "playground"]
authors = [
  { name = "Synativ", email = "info@synativ.com" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pytest",
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "torchgeo>=0.5.1",
  "rioxarray>=0.15.0",
  "albumentations>=1.3.1",
  "rasterio>=1.3.9",
  "torchmetrics<=1.3.1",
  "geopandas>=0.14.2",
  "lightly>=1.4.25",
  "h5py>=3.10.0",
  "geobench>=1.0.0",
  "mlflow>=2.11.1"
]

[project.optional-dependencies]
dev = [
  "black",
]

[project.urls]
Documentation = "https://github.com/synativ/RSFMs#readme"
Issues = "https://github.com/synativ/RSFMs/issues"
Source = "https://github.com/synativ/RSFMs"

[project.scripts]
rsfms = "rsfms.__main__:main"

[[tool.mypy.overrides]]
module = "timm"
ignore_missing_imports = true

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["rsfms"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tasks rely on torch lightning saving args to hparams dict
"src/rsfms/tasks/*" = ["ARG002"]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
